Fixed check banner on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -166,6 +166,13 @@ body{
       height: 96vh;
     }
 
+    #clickHere{
+      top: 8px;
+      padding: 0px 5px 5px 3px;
+      font-size: 12px;
+  
+    }
+
     @keyframes blob {
       0% {border-radius: 23% 1% 51% 4% / 26% 63% 28% 46%;
           height: 100vh;}
